[gd_scene load_steps=24 format=2]

[ext_resource path="res://assets/adventurer-v1.5-Sheet.png" type="Texture" id=1]
[ext_resource path="res://src/player/move.gd" type="Script" id=2]
[ext_resource path="res://src/player/player.gd" type="Script" id=3]
[ext_resource path="res://src/player/player_fsm.gd" type="Script" id=4]
[ext_resource path="res://src/player/idle.gd" type="Script" id=5]
[ext_resource path="res://src/ARIAL.TTF" type="DynamicFontData" id=6]
[ext_resource path="res://src/player/jump.gd" type="Script" id=7]
[ext_resource path="res://src/player/fall.gd" type="Script" id=8]
[ext_resource path="res://src/player/wall_slide.gd" type="Script" id=9]
[ext_resource path="res://src/player/dash.gd" type="Script" id=10]
[ext_resource path="res://src/boxes/Hitbox.tscn" type="PackedScene" id=11]
[ext_resource path="res://src/boxes/Hurtbox.tscn" type="PackedScene" id=12]

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 6 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 33, 77.5 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 41, 76 )

[sub_resource type="Animation" id=10]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite/PlayerHitbox/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=8]
resource_name = "attack"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 49, 50, 51, 52 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/PlayerHitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=6]
resource_name = "fall"
length = 0.3
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 22, 23 ]
}

[sub_resource type="Animation" id=2]
resource_name = "idle"
length = 0.75
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=5]
resource_name = "jump"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 14, 15, 16, 17 ]
}

[sub_resource type="Animation" id=3]
resource_name = "move"
length = 0.85
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12, 13 ]
}

[sub_resource type="Animation" id=7]
resource_name = "wall_slide"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 79, 80 ]
}

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 30, 75.5 )

[node name="Player" type="KinematicBody2D"]
collision_mask = 4
script = ExtResource( 3 )

[node name="StateLabel" type="Label" parent="."]
margin_left = -36.0
margin_top = -101.0
margin_right = 36.0
margin_bottom = -65.0
custom_fonts/font = SubResource( 4 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 7
vframes = 16

[node name="PlayerHitbox" parent="Sprite" instance=ExtResource( 11 )]

[node name="CollisionShape2D" parent="Sprite/PlayerHitbox" index="0"]
modulate = Color( 0.301961, 0.247059, 0.976471, 1 )
position = Vector2( 87, 16.5 )
shape = SubResource( 11 )
disabled = true

[node name="PlayerHurtbox" parent="Sprite" instance=ExtResource( 12 )]

[node name="CollisionShape2D" parent="Sprite/PlayerHurtbox" index="0"]
modulate = Color( 1, 0.521569, 0.521569, 1 )
position = Vector2( 0, 17 )
shape = SubResource( 12 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 10 )
anims/attack = SubResource( 8 )
anims/fall = SubResource( 6 )
anims/idle = SubResource( 2 )
anims/jump = SubResource( 5 )
anims/move = SubResource( 3 )
anims/wall_slide = SubResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 19.5 )
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2( 0, -50 )
current = true
zoom = Vector2( 1.2, 1.2 )
limit_left = 0
drag_margin_h_enabled = true
drag_margin_v_enabled = true
drag_margin_left = 0.0
drag_margin_top = 0.0
drag_margin_right = 0.0
drag_margin_bottom = 0.0

[node name="PlayerFSM" type="Node" parent="."]
script = ExtResource( 4 )
initial_state = NodePath("Fall")

[node name="Idle" type="Node" parent="PlayerFSM"]
script = ExtResource( 5 )

[node name="Move" type="Node" parent="PlayerFSM"]
script = ExtResource( 2 )

[node name="Jump" type="Node" parent="PlayerFSM"]
script = ExtResource( 7 )

[node name="Fall" type="Node" parent="PlayerFSM"]
script = ExtResource( 8 )

[node name="WallSlide" type="Node" parent="PlayerFSM"]
script = ExtResource( 9 )

[node name="Dash" type="Node" parent="PlayerFSM"]
script = ExtResource( 10 )

[node name="WallJumpTimer" type="Timer" parent="."]
one_shot = true

[node name="DashDurationTimer" type="Timer" parent="."]
one_shot = true

[node name="DashCooldownTimer" type="Timer" parent="."]
one_shot = true

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="WallJumpTimer" to="PlayerFSM/WallSlide" method="_on_WallJumpTimer_timeout"]
[connection signal="timeout" from="DashDurationTimer" to="PlayerFSM/Dash" method="_on_DashDurationTimer_timeout"]
[connection signal="timeout" from="DashCooldownTimer" to="PlayerFSM/Dash" method="_on_DashCooldownTimer_timeout"]

[editable path="Sprite/PlayerHitbox"]
[editable path="Sprite/PlayerHurtbox"]
